cmake_minimum_required(VERSION 3.21.1)
set(CMAKE_BUILD_TYPE debug)
project(raycaster)
find_package(OpenGL REQUIRED)
find_package(GLEW REQUIRED)
find_package(SDL2 REQUIRED)
find_package(glm REQUIRED)
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/basicShader.vs DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/basicShader.fs DESTINATION ${CMAKE_CURRENT_BINARY_DIR})	
include_directories(${OPENGL_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${SDL2_INCLUDE_DIRS} ${GLM_INCLUDE_DIRS})
add_executable(raycaster main.cpp init.h init.cpp shader.h shader.cpp mesh.h mesh.cpp transform.h transform.cpp shapes.h shapes.cpp player.cpp player.h ray.cpp ray.h)
target_link_libraries(raycaster ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES} ${SDL2_LIBRARIES} ${GLM_LIBRARIES})
